--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 </head>
 
 <body>
-    <h1>Nguyễn Tuấn Anh</h1>
+    <div class="flex flex-col justify-center items-center p-5 rounded-md">
+        <div>
+            <img src="zaloimg.jpg" class="w-20 h-20 rounded-full" alt="">
+
+
+        </div>
+        <div
+            class="bg-gray-700 text-white flex flex-col justify-center items-center my-6 rounded-md h-40 p-5 ">
+            <h1 class="text-center font-semibold text-2xl">Nguyễn Tuấn Anh</h1>
+            <p class="font-light text-center">31/01/2003</p>
+        </div>
+
+    </div>
+
+
+
+    <script src="https://cdn.tailwindcss.com"></script>
 </body>
 
 </html>
