--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             class="bg-gray-700 text-white flex flex-col justify-center items-center my-6 rounded-md h-40 p-5 ">
             <h1 class="text-center font-semibold text-2xl">Nguyễn Tuấn Anh</h1>
             <p class="font-light text-center">31/01/2003</p>
+            <p class="font-light text-center">Hà Nội</p>
+
         </div>
 
     </div>
