--- a/index.html
+++ b/index.html
@@ -4,26 +4,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nguyễn Tuấn Anh</title>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
 </head>
 
 <body>
-    <div class="flex flex-col justify-center items-center p-5 rounded-md">
-        <div>
-            <img src="zaloimg.jpg" class="w-20 h-20 rounded-full" alt="">
-
-
-        </div>
+    <div class="bg-[url('bgprofile.jpg')] relative min-h-screen bg-cover">
         <div
-            class="bg-gray-700 text-white flex flex-col justify-center items-center my-6 rounded-md h-40 p-5 ">
-            <h1 class="text-center font-semibold text-2xl">Nguyễn Tuấn Anh</h1>
-            <p class="font-light text-center">PH30476</p>
-            <p class="font-light text-center">31/01/2003</p>
-            <p class="font-light text-center">Hà Nội</p>
+            class="flex   flex-col absolute left-1/2 -translate-y-1/2 -translate-x-1/2 top-[50%]  items-center p-5 rounded-md">
+
+            <div
+                class="bg-slate-950 text-white flex flex-col justify-center items-center my-6 rounded-md pt-20  p-5 relative">
+                <div class="absolute -top-10">
+                    <img src="zaloimg.jpg" class="w-20 h-20 rounded-full" alt="">
+
+
+                </div>
+                <div class="text-center mb-7">
+                    <h1 class=" font-semibold text-2xl mb-2">Nguyễn Tuấn Anh</h1>
+                    <p class="font-light">Web developer</p>
+                </div>
+                <div class="">
+                    <div class="flex gap-10">
+                        <div>
+                            <p class="mb-2"><span class="font-light">Student id:</span> PH30476</p>
+                            <p><span class="font-light">Address:</span> Ha Noi</p>
+
+                        </div>
+                        <div class="">
+                            <p class="mb-2"><span class="font-light">Age:</span> 20</p>
+                            <p><span class="font-light">Major:</span> Front-end</p>
+
+                        </div>
+
+                    </div>
+                    <div class="mt-12 pt-10 pb-10 ">
+                        <ul class="flex justify-evenly ">
+                            <li><span><i
+                                        class="fa-brands text-3xl animate-bounce text-yellow-500 fa-square-js"></i></span>
+                            </li>
+                            <li><span><i
+                                        class="fa-brands animate-ping text-3xl text-white fa-java"></i></span>
+                            </li>
+                            <li><span><i
+                                        class="animate-spin fa-brands text-3xl text-blue-500 fa-php"></i></span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
 
         </div>
-
     </div>
+
 
 
 
