--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div
                 class="bg-slate-950 text-white flex flex-col justify-center items-center my-6 rounded-md pt-20  p-5 relative">
                 <div class="absolute -top-10">
-                    <img src="zaloimg.jpg" class="w-20 h-20 rounded-full" alt="">
+                    <img src="atv2.jpg" class="w-20 object-cover h-20 rounded-full" alt="">
 
 
                 </div>
